[metadata]
name = pil_layout
version = 0.0.2
description = layout engine for PIL
author = Abe Winter
author_email = awinter.public@gmail.com

[options]
packages = pil_layout
install_requires =
  pillow>=9.3.0

[options.extras_require]
# todo: switch to tests_require when supported
test =
  pytest>=7.1.2
  pylint
